--- a/app/src/main/res/layout/activity_weight_goal.xml
+++ b/app/src/main/res/layout/activity_weight_goal.xml
@@ -16,10 +16,11 @@
         android:layout_marginRight="25dp"
         android:layout_marginBottom="213dp"
         >
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/logo_3"/>
+            android:src="@drawable/logo_3" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -55,7 +56,7 @@
             android:textSize="20dp"
             android:textStyle="bold" />
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edittext_weightgoal"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
@@ -66,9 +67,9 @@
             android:fontFamily="@font/concert_one"
             android:gravity="center_horizontal"
             android:hint="00"
-            android:inputType="numberSigned"
+            android:inputType="numberSigned|numberDecimal"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
+            android:textColorHint="#BDBDBD"
             android:textSize="40sp"
             android:textStyle="bold" />
 
@@ -93,8 +94,8 @@
         android:layout_above="@+id/centerhorizontalline"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="25dp"
-        android:background="@drawable/cardbackground"
-        android:layout_marginBottom="-141dp">
+        android:layout_marginBottom="-141dp"
+        android:background="@drawable/cardbackground">
 
         <TextView
             android:layout_width="match_parent"
