--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -102,7 +102,7 @@
                         android:layout_marginStart="20dp"
                         android:layout_toEndOf="@+id/bmi_icon"
                         android:fontFamily="@font/concert_one"
-                        android:text="Update BMI"
+                        android:text="Update Body Size"
                         android:textColor="@color/black"
                         android:textSize="15sp"
                         android:textStyle="bold" />
