--- a/app/src/main/res/layout/fragment_weight_goal_update.xml
+++ b/app/src/main/res/layout/fragment_weight_goal_update.xml
@@ -75,7 +75,7 @@
             android:textSize="20dp"
             android:textStyle="bold" />
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edittext_weightgoal"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
@@ -85,9 +85,9 @@
             android:fontFamily="@font/concert_one"
             android:gravity="center_horizontal"
             android:hint="00"
-            android:inputType="number"
+            android:inputType="numberSigned|numberDecimal"
             android:textColor="@color/white"
-            android:textColorHint="#E1E1E1"
+            android:textColorHint="#BDBDBD"
             android:textSize="40sp" />
 
         <TextView
