--- a/app/src/main/res/layout/activity_health_conditions.xml
+++ b/app/src/main/res/layout/activity_health_conditions.xml
@@ -47,6 +47,7 @@
         android:background="@drawable/cardbackground">
 
         <TextView
+            android:id="@+id/textview_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
