--- a/app/src/main/res/layout/activity_bmi_user.xml
+++ b/app/src/main/res/layout/activity_bmi_user.xml
@@ -87,7 +87,7 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/weightlayout"
+        android:id="@+id/container_weightgoal"
         android:layout_width="340dp"
         android:layout_height="150dp"
         android:layout_above="@+id/centerhorizontalline"
