--- a/app/src/main/res/layout/activity_weight_goal.xml
+++ b/app/src/main/res/layout/activity_weight_goal.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,95 +7,160 @@
     android:background="@drawable/bg_2"
     tools:context=".WeightGoalActivity">
 
-    <RelativeLayout
-        android:id="@+id/logo"
-        android:layout_width="340dp"
-        android:layout_height="150dp"
-        android:layout_above="@+id/centerhorizontalline"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginBottom="213dp"
-        >
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/logo_3"
+        app:layout_constraintBottom_toTopOf="@+id/guideline31"
+        app:layout_constraintEnd_toStartOf="@+id/guideline36"
+        app:layout_constraintStart_toStartOf="@+id/guideline35"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/logo_3" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/centerhorizontalline"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true" />
-
-    <RelativeLayout
-        android:id="@+id/centerverticalline"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline31"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_percent="0.20"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <RelativeLayout
-        android:id="@+id/weightlayout"
-        android:layout_width="340dp"
-        android:layout_height="150dp"
-        android:layout_above="@+id/centerhorizontalline"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="25dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/cardbackground">
+        android:background="@drawable/cardbackground"
+        app:layout_constraintBottom_toTopOf="@+id/heightlayout"
+        app:layout_constraintEnd_toStartOf="@+id/guideline36"
+        app:layout_constraintStart_toStartOf="@+id/guideline35"
+        app:layout_constraintTop_toTopOf="@+id/guideline31">
 
-        <TextView
-            android:layout_width="match_parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/container_weightgoal"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:fontFamily="@font/concert_one"
-            android:text="Weight Goal"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            android:background="@drawable/cardbackground"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edittext_weightgoal"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerInParent="true"
-            android:layout_marginBottom="50dp"
-            android:ems="10"
-            android:fontFamily="@font/concert_one"
-            android:gravity="center_horizontal"
-            android:hint="00"
-            android:inputType="numberSigned|numberDecimal"
-            android:textColor="@color/white"
-            android:textColorHint="#BDBDBD"
-            android:textSize="40sp"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/concert_one"
+                android:text="Weight Goal"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginStart="20dp"
-            android:layout_toEndOf="@id/edittext_weightgoal"
-            android:fontFamily="@font/concert_one"
-            android:text="Kg"
-            android:textColor="@color/white"
-            android:textSize="25sp" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edittext_weightgoal"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="8dp"
+                android:ems="10"
+                android:fontFamily="@font/concert_one"
+                android:gravity="center_horizontal"
+                android:hint="00"
+                android:inputType="numberSigned|numberDecimal"
+                android:textColor="@color/white"
+                android:textColorHint="#BDBDBD"
+                android:textSize="40sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView15" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginStart="4dp"
+                android:layout_marginBottom="10dp"
+                android:layout_toEndOf="@id/edittext_weightgoal"
+                android:fontFamily="@font/concert_one"
+                android:text="Kg"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                app:layout_constraintBottom_toBottomOf="@+id/edittext_weightgoal"
+                app:layout_constraintStart_toEndOf="@+id/edittext_weightgoal" />
 
 
-    </RelativeLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/container_zumbaperday"
+            android:layout_width="0dp"
+            android:layout_height="130dp"
+            android:background="@drawable/cardbackground"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/container_weightgoal">
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/concert_one"
+                android:text="Desired Number of Zumba per day"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edittext_zumbacountgoal"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="8dp"
+                android:ems="10"
+                android:fontFamily="@font/concert_one"
+                android:gravity="center_horizontal"
+                android:hint="00"
+                android:inputType="numberSigned"
+                android:textColor="@color/white"
+                android:textColorHint="#BDBDBD"
+                android:textSize="40sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView16" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <RelativeLayout
         android:id="@+id/heightlayout"
         android:layout_width="340dp"
         android:layout_height="150dp"
-        android:layout_above="@+id/centerhorizontalline"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginBottom="-141dp"
-        android:background="@drawable/cardbackground">
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/cardbackground"
+        app:layout_constraintBottom_toTopOf="@+id/button_next"
+        app:layout_constraintEnd_toStartOf="@+id/guideline36"
+        app:layout_constraintStart_toStartOf="@+id/guideline35">
 
         <TextView
             android:layout_width="match_parent"
@@ -112,18 +177,35 @@
 
     <android.widget.Button
         android:id="@+id/button_next"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="14dp"
         android:background="@drawable/bg_login"
         android:fontFamily="@font/concert_one"
         android:text="Next"
         android:textColor="@color/black"
         android:textSize="15sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline35"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.05" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline36"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.95" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
