--- a/app/src/main/res/layout/fragment_health_condition_update.xml
+++ b/app/src/main/res/layout/fragment_health_condition_update.xml
@@ -68,7 +68,7 @@
         app:layout_constraintVertical_bias="0.13999999">
 
         <TextView
-            android:id="@+id/textview_info"
+            android:id="@+id/textview_zumbagoalpercentage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
