--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -138,7 +138,7 @@
                         android:layout_marginStart="20dp"
                         android:layout_toEndOf="@+id/weightgoal_icon"
                         android:fontFamily="@font/concert_one"
-                        android:text="Update Weight Goal"
+                        android:text="Monitor Goals"
                         android:textColor="@color/black"
                         android:textSize="15sp"
                         android:textStyle="bold" />
