--- a/app/src/main/res/layout/fragment_monitor_goals.xml
+++ b/app/src/main/res/layout/fragment_monitor_goals.xml
@@ -329,6 +329,14 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/container_weightlossmonitor"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="16dp">
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         </LinearLayout>
     </ScrollView>
 
