--- a/app/src/main/res/layout/fragment_weight_loss_monitoring.xml
+++ b/app/src/main/res/layout/fragment_weight_loss_monitoring.xml
@@ -13,7 +13,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout5"
             android:layout_width="0dp"
-            android:layout_height="250dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/cardbackground"
             android:paddingLeft="10dp"
             android:paddingTop="10dp"
@@ -23,12 +23,27 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <TextView
+                android:id="@+id/textview_constanttitle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/concert_one"
+                android:text="Weight Loss"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <android.widget.Button
                 android:id="@+id/button_pick_date"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_alignParentBottom="true"
 
+                android:layout_marginTop="10dp"
                 android:background="@drawable/bg_login"
                 android:fontFamily="@font/concert_one"
                 android:text="Pick Date"
@@ -37,7 +52,7 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/textview_constanttitle" />
 
             <TextView
                 android:id="@+id/textview_info"
